--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["setuptools>=68", "wheel"]
+requires = ["setuptools>=68", "wheel", "packaging"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "whatsupbraeker"
-version = "0.3.0"
+version = "0.3.1"
 description = "Python bindings for the WhatsUpBraeker Go WhatsApp bridge."
 readme = "readme.md"
 requires-python = ">=3.9"
